--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Rescure Dogs are on the Rescue</title>
     
@@ -13,9 +13,9 @@
       <link rel="stylesheet" href="styles.css">
     </header>
     <main>
-      <p id="funParagraph">
+      <testp id="funParagraph">
          Famous artist Vincent Van Gogh once said "If you don't have a dog - at least one - there isn't necessarily anything wrong with you, but there may be something wrong with your life."
-       </p>
+      </testp>
        
       <article>
         <section>
