changed funparagraph from a id to a class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
     </header>
     <main>
-      <testp id="funParagraph">
+      <testp class="funParagraph">
          Famous artist Vincent Van Gogh once said "If you don't have a dog - at least one - there isn't necessarily anything wrong with you, but there may be something wrong with your life."
       </testp>
        
