changed id to testp for the class funparagraph

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       
     </header>
     <main>
-      <testp class="funParagraph">
+      <p id=testP class="funParagraph">
          Famous artist Vincent Van Gogh once said "If you don't have a dog - at least one - there isn't necessarily anything wrong with you, but there may be something wrong with your life."
-      </testp>
+      </p>
        
       <article>
         <section>
