added image for the ordered list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <header>
       <h1 id="mainHeading">Rescue Dogs are on the Rescue</h1>
-      <h2 class="page_sub_header">The Story of Yogi &#38; Stan</h2>
-           
+      <h2 class="page_sub_header">The Story of Yogi &#38; Stan</h2> 
       
     </header>
     <main>
@@ -42,6 +41,7 @@
       </article>
 <section>
    <h3 class="dog_name">Items needed for an adopted dog</h3>
+  
    <ol id = "list", type = "1">
       <li>Water and food bowls</li>
       <li>Food</li>
@@ -52,6 +52,7 @@
       <li>Dog shampoo</li>
       <li>Dog bed</li>
    </ol>
+    <img src="petSupplies.jpg" alt="Picture of pet store"/>
 </section>
 
     </main>
