modified the font and image size for css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p class="dog_description">The first dog that me and wife adopted as a married couple was Yogi. Yogi is to best of our knowledge a Schnoozer and Yorki mix. We first met Yogi 5 years ago at the St. Louis Humane's Society.  At the time Yogi was a very hyper dog who went by the name of Stewart.  Yogi would bark constantly and paw at anyone who came near him.
                 Over the years Yogi has calmed down, so some degree, but has always maintained a vocal party of our family.  As soon as someone walks by our home he is ready to dart to the window and 
                 let them know he is home.  </p>
+               
             <figure>
                 <img src="yogi.jpg" alt="Picture of Yogi"/>
               </figure>
@@ -37,6 +38,15 @@
                 <img src="stan.jpg" alt="Picture of Stan" />
               </figure>
 </section>
+
+<section>
+  <h3 class="dog_name">The Pandemic and the Importance of Our Animal Companions</h3>
+      <p class="dog_description">Since the pandemic started a few years ago, the need for companionship has become more apparent for everyone and 
+        their mental well being. A dog may not be for everyone, but pets have become a beacon for most for a since a calm and interaction.  Yogi and Stan, have
+      created that sense of well being for me and my wife, in a way that wouldn't want otherwise.</p>
+  <figure>
+      <img src="StanYogi.jpg" alt="Picture of Yogi & Yogi"/>
+    </figure>
 
       </article>
 <section>
